crates/aiken-lang/src/tests/snapshots/opaque_type.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\npub opaque type User {\n  name: _w\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        DataType(
            DataType {
                constructors: [
                    RecordConstructor {
                        location: 21..35,
                        name: "User",
                        arguments: [
                            RecordConstructorArg {
                                label: Some(
                                    "name",
                                ),
                                annotation: Hole {
                                    location: 31..33,
                                    name: "_w",
                                },
                                location: 25..33,
                                tipo: (),
                                doc: None,
                            },
                        ],
                        doc: None,
                        sugar: true,
                    },
                ],
                doc: None,
                location: 0..35,
                name: "User",
                opaque: true,
                parameters: [],
                public: true,
                typed_parameters: [],
            },
        ),
    ],
    kind: Validator,
}
