crates/aiken-lang/src/tests/snapshots/parse_unicode_offset_2.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\nfn foo() {\n  let x = \"*\"\n  x\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Sequence {
                    location: 13..28,
                    expressions: [
                        Assignment {
                            location: 13..24,
                            value: ByteArray {
                                location: 21..24,
                                bytes: [
                                    42,
                                ],
                                preferred_format: Utf8String,
                            },
                            pattern: Var {
                                location: 17..18,
                                name: "x",
                            },
                            kind: Let,
                            annotation: None,
                        },
                        Var {
                            location: 27..28,
                            name: "x",
                        },
                    ],
                },
                doc: None,
                location: 0..8,
                name: "foo",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 29,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
