crates/aiken-lang/src/tests/snapshots/parsing_numeric_underscore.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\nfn foo() {\n  let i = 1_234_567\n  let j = 1_000_000\n  let k = -10_000\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Sequence {
                    location: 13..68,
                    expressions: [
                        Assignment {
                            location: 13..30,
                            value: Int {
                                location: 21..30,
                                value: "1234567",
                                base: Decimal {
                                    numeric_underscore: true,
                                },
                            },
                            pattern: Var {
                                location: 17..18,
                                name: "i",
                            },
                            kind: Let,
                            annotation: None,
                        },
                        Assignment {
                            location: 33..50,
                            value: Int {
                                location: 41..50,
                                value: "1000000",
                                base: Decimal {
                                    numeric_underscore: true,
                                },
                            },
                            pattern: Var {
                                location: 37..38,
                                name: "j",
                            },
                            kind: Let,
                            annotation: None,
                        },
                        Assignment {
                            location: 53..68,
                            value: UnOp {
                                op: Negate,
                                location: 61..68,
                                value: Int {
                                    location: 62..68,
                                    value: "10000",
                                    base: Decimal {
                                        numeric_underscore: true,
                                    },
                                },
                            },
                            pattern: Var {
                                location: 57..58,
                                name: "k",
                            },
                            kind: Let,
                            annotation: None,
                        },
                    ],
                },
                doc: None,
                location: 0..8,
                name: "foo",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 69,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
